[package]
name = "serving"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
bytes = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "signal", "sync", "time", "rt-multi-thread"] }
tower = { version = "0.5", features = ["limit"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

